<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".SingleActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/two_bar" />

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@drawable/bt_back" />

            <ImageButton
                android:id="@+id/buttonStart"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bt_start" />
        </RelativeLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/player1"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_weight="0.7"/>

        <EditText
            android:id="@+id/player1Name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/player1"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/player2"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:layout_weight="0.7"/>

        <EditText
            android:id="@+id/player2Name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/player2"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/player_color"
            android:textColor="@color/orange"
            android:textSize="25sp"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/player1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center"
            android:text="@string/player1"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_weight="0.1"/>

        <TextView
            android:id="@+id/player2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center"
            android:text="@string/player2"
            android:textColor="@color/orange"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/player1Color"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/w_rook"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/buttonColor"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/arrows"
            android:scaleType="fitCenter"
            android:layout_weight="0.1"/>

        <ImageButton
            android:id="@+id/player2Color"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:background="@null"
            android:src="@drawable/b_rook"
            android:layout_weight="1"/>

    </TableRow>


</TableLayout>